--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <body class="bg-slate-950 text-slate-200 min-h-screen">
   
   <div class="pointer-events-none fixed inset-0 overflow-hidden">
+  <div class="bg-aurora"></div>
     <div class="absolute -top-48 -left-40 h-96 w-96 rounded-full bg-fuchsia-500/20 blur-3xl"></div>
     <div class="absolute -bottom-48 -right-40 h-96 w-96 rounded-full bg-cyan-500/20 blur-3xl"></div>
     <!-- Soft particle background -->
@@ -26,22 +27,28 @@
       <span class="particle" style="--l:85%;--t:30%;--dx:-12px;--dy:6px;--dur:21s;--delay:-5s"></span>
       <span class="particle" style="--l:50%;--t:80%;--dx:8px;--dy:-8px;--dur:19s;--delay:-7s"></span>
       <span class="particle" style="--l:15%;--t:85%;--dx:-6px;--dy:8px;--dur:23s;--delay:-9s"></span>
-    </div>
+  </div>
+  <div class="bg-grid"></div>
   </div>
 
   <header class="relative z-10 border-b border-white/10 backdrop-blur supports-[backdrop-filter]:bg-slate-900/40">
   <div class="mx-auto max-w-7xl px-6 py-5 flex items-center justify-between">
       <a href="#home" class="flex items-center gap-3">
-        <svg width="36" height="36" viewBox="0 0 64 64" xmlns="http://www.w3.org/2000/svg" class="rounded-xl shadow-[0_0_40px_-10px_rgba(168,85,247,.7)]">
+        <svg width="36" height="36" viewBox="0 0 64 64" xmlns="http://www.w3.org/2000/svg" class="rounded-xl shadow-[0_0_40px_-10px_rgba(168,85,247,.7)]" role="img" aria-label="HackMate logo">
           <defs>
-            <linearGradient id="g" x1="0" y1="0" x2="1" y2="1">
+            <linearGradient id="hm_g" x1="0" y1="0" x2="1" y2="1">
               <stop offset="0%" stop-color="#a855f7"/>
               <stop offset="60%" stop-color="#6366f1"/>
               <stop offset="100%" stop-color="#22d3ee"/>
             </linearGradient>
           </defs>
-          <rect x="2" y="2" width="60" height="60" rx="14" fill="url(#g)"/>
-          <text x="50%" y="54%" text-anchor="middle" font-size="28" font-weight="800" fill="#0b1020" font-family="Inter, system-ui">HM</text>
+          <rect x="2" y="2" width="60" height="60" rx="14" fill="url(#hm_g)"/>
+          <!-- Code brackets + team dot -->
+          <g fill="none" stroke="#0b1020" stroke-width="3.5" stroke-linecap="round" stroke-linejoin="round">
+            <path d="M26 22 L18 32 L26 42"/>
+            <path d="M38 22 L46 32 L38 42"/>
+          </g>
+          <circle cx="32" cy="32" r="3.2" fill="#0b1020"/>
         </svg>
         <h1 class="text-xl font-extrabold tracking-tight">HackMate</h1>
       </a>
@@ -58,6 +65,12 @@
         <button id="perfToggle" title="Toggle performance mode" class="rounded-md border border-white/10 bg-white/5 px-2 py-1 text-xs text-slate-300 hover:bg-white/10">Perf</button>
         <a href="login.html" class="rounded-lg border border-white/10 bg-white/5 px-4 py-2 text-sm font-medium text-white hover:bg-white/10 focus:outline-none focus-visible:ring-2 focus-visible:ring-cyan-500">Log in</a>
         <a href="createprofile.html" id="newProfileBtn" class="rounded-lg bg-white/10 px-4 py-2 text-sm font-medium text-white hover:bg-white/15 focus:outline-none focus-visible:ring-2 focus-visible:ring-fuchsia-500">Create Profile</a>
+  <a id="profileIcon" href="profile.html" class="hidden inline-flex items-center justify-center h-9 w-9 rounded-full border border-white/10 bg-white/5 hover:bg-white/10" title="Your profile" aria-label="Profile">
+          <svg viewBox="0 0 24 24" width="18" height="18" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
+            <path d="M12 12c2.761 0 5-2.462 5-5.5S14.761 1 12 1 7 3.462 7 6.5 9.239 12 12 12z"/>
+            <path d="M20.5 20.5c0-3.59-3.582-6.5-8.5-6.5s-8.5 2.91-8.5 6.5"/>
+          </svg>
+        </a>
         <button id="mobileMenuBtn" class="md:hidden inline-flex items-center justify-center rounded-md border border-white/10 bg-white/5 p-2 text-slate-200 hover:bg-white/10 focus:outline-none" aria-label="Open menu" aria-expanded="false">
           <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true"><line x1="3" y1="6" x2="21" y2="6"></line><line x1="3" y1="12" x2="21" y2="12"></line><line x1="3" y1="18" x2="21" y2="18"></line></svg>
         </button>
@@ -79,6 +92,7 @@
       <div id="mobileMenuActions" class="mt-3 grid grid-cols-2 gap-2">
         <a id="mobileLoginLink" href="login.html" class="rounded-lg border border-white/10 bg-white/5 px-4 py-2 text-center text-sm text-white hover:bg-white/10">Log in</a>
         <a href="createprofile.html" class="rounded-lg bg-white/10 px-4 py-2 text-center text-sm text-white hover:bg-white/15">Create Profile</a>
+        <a id="mobileProfileLink" href="profile.html" class="hidden rounded-lg border border-white/10 bg-white/5 px-4 py-2 text-center text-sm text-white hover:bg-white/10">My Profile</a>
       </div>
     </div>
   </div>
@@ -235,7 +249,7 @@
       <div class="rounded-2xl border border-white/10 bg-white/5 p-6 backdrop-blur space-y-8">
         <header>
           <h3 class="text-xl font-bold">About Us</h3>
-          <p class="mt-1 text-sm text-slate-400">Team name: <span class="font-semibold text-slate-200">HackMate</span> <span class="text-slate-500">(aka Code Catalyst)</span></p>
+          <p class="mt-1 text-sm text-slate-400">Team name: <span class="font-semibold text-slate-200">HackMate</span> <span class="text-slate-500"></span></p>
           <p class="mt-2 text-slate-300">HackMate helps participants find teammates and teams for hackathons quickly using skill-based matching and instant chat. Built with care to make collaboration delightful.</p>
         </header>
 
@@ -260,27 +274,27 @@
     <article class="card reveal">
               <div class="card-body">
                 <div class="flex items-start gap-3">
-      <img src="https://i.pravatar.cc/80?u=shayan" alt="Shayan" class="h-12 w-12 rounded-xl object-cover border border-white/10" />
+  <img src="https://ui-avatars.com/api/?name=Shayan&background=a855f7&color=0b1020&size=80&bold=true" alt="Shayan" class="h-12 w-12 rounded-xl object-cover border border-white/10" />
                   <div>
                     <h5 class="font-semibold">Shayan</h5>
-                    <p class="text-xs text-slate-400">Team Lead</p>
+                    <p class="text-xs text-slate-400">Backend Developer</p>
                   </div>
                 </div>
                 <p class="mt-3 text-sm text-slate-300">Full‑stack builder. Focus on product, UX polish, and system design. Led feature architecture and UI.</p>
                 <div class="mt-3 flex flex-wrap gap-2">
                   <span class="badge">React</span>
                   <span class="badge">Node.js</span>
-                  <span class="badge">Tailwind</span>
+                  <span class="badge">MongoDB</span>
                 </div>
               </div>
             </article>
     <article class="card reveal" style="--reveal-delay:80ms">
               <div class="card-body">
                 <div class="flex items-start gap-3">
-      <img src="https://i.pravatar.cc/80?u=shwetank" alt="Shwetank" class="h-12 w-12 rounded-xl object-cover border border-white/10" />
+  <img src="https://ui-avatars.com/api/?name=Shwetank&background=6366f1&color=0b1020&size=80&bold=true" alt="Shwetank" class="h-12 w-12 rounded-xl object-cover border border-white/10" />
                   <div>
                     <h5 class="font-semibold">Shwetank</h5>
-                    <p class="text-xs text-slate-400">Co‑Lead</p>
+                    <p class="text-xs text-slate-400">Frontend Developer</p>
                   </div>
                 </div>
                 <p class="mt-3 text-sm text-slate-300">Backend and data. Worked on matching logic, performance, and reliability.</p>
@@ -288,6 +302,44 @@
                   <span class="badge">Python</span>
                   <span class="badge">FastAPI</span>
                   <span class="badge">PostgreSQL</span>
+                </div>
+              </div>
+            </article>
+            <article class="card reveal" style="--reveal-delay:160ms">
+              <div class="card-body">
+                <div class="flex items-start gap-3">
+                  <img src="https://ui-avatars.com/api/?name=Mainak&background=22d3ee&color=0b1020&size=80&bold=true" alt="Mainak" class="h-12 w-12 rounded-xl object-cover border border-white/10" />
+                  <div>
+                    <h5 class="font-semibold">Mainak</h5>
+                    <p class="text-xs text-slate-400">Frontend Engineer</p>
+                  </div>
+                </div>
+                <p class="mt-3 text-sm text-slate-300">Builds fast, responsive UIs and optimizes performance for smooth interactions.</p>
+                <div class="mt-3 flex flex-wrap gap-2">
+                  <span class="badge">HTML</span>
+                  <span class="badge">CSS</span>
+                  <span class="badge">JavaScript</span>
+                  <span class="badge">React</span>
+                  <span class="badge">Tailwind</span>
+                </div>
+              </div>
+            </article>
+            <article class="card reveal" style="--reveal-delay:240ms">
+              <div class="card-body">
+                <div class="flex items-start gap-3">
+                  <img src="https://ui-avatars.com/api/?name=Renescence&background=ec4899&color=0b1020&size=80&bold=true" alt="Renescence" class="h-12 w-12 rounded-xl object-cover border border-white/10" />
+                  <div>
+                    <h5 class="font-semibold">Renescence</h5>
+                    <p class="text-xs text-slate-400">Frontend Developer</p>
+                  </div>
+                </div>
+                <p class="mt-3 text-sm text-slate-300">Specializes in modern frontend with great accessibility, layouts, and polish.</p>
+                <div class="mt-3 flex flex-wrap gap-2">
+                  <span class="badge">HTML</span>
+                  <span class="badge">CSS</span>
+                  <span class="badge">JavaScript</span>
+                  <span class="badge">React</span>
+                  <span class="badge">Tailwind</span>
                 </div>
               </div>
             </article>
@@ -343,7 +395,7 @@
         <div id="about-contact" class="space-y-3">
           <h4 class="text-lg font-bold">Contact Us</h4>
           <div class="flex flex-wrap items-center gap-3">
-            <a href="mailto:hackmate@example.com" class="rounded-md border border-white/10 bg-white/5 px-3 py-2 hover:bg-white/10">Email</a>
+            <a href="mailto:shayanghosh0439@gmail.com" class="rounded-md border border-white/10 bg-white/5 px-3 py-2 hover:bg-white/10">Email</a>
             <a href="#" class="rounded-md border border-white/10 bg-white/5 px-3 py-2 hover:bg-white/10">LinkedIn</a>
             <a href="#" class="rounded-md border border-white/10 bg-white/5 px-3 py-2 hover:bg-white/10">GitHub</a>
           </div>
@@ -395,7 +447,21 @@
     <div class="mx-auto max-w-7xl px-6 py-10 grid grid-cols-1 md:grid-cols-3 gap-6 text-sm text-slate-300">
       <div>
         <div class="flex items-center gap-2">
-          <div class="h-7 w-7 rounded-md bg-gradient-to-br from-fuchsia-500 via-violet-500 to-cyan-500"></div>
+          <svg width="28" height="28" viewBox="0 0 64 64" xmlns="http://www.w3.org/2000/svg" class="rounded-md">
+            <defs>
+              <linearGradient id="hm_g_ft" x1="0" y1="0" x2="1" y2="1">
+                <stop offset="0%" stop-color="#a855f7"/>
+                <stop offset="60%" stop-color="#6366f1"/>
+                <stop offset="100%" stop-color="#22d3ee"/>
+              </linearGradient>
+            </defs>
+            <rect x="4" y="4" width="56" height="56" rx="12" fill="url(#hm_g_ft)"/>
+            <g fill="none" stroke="#0b1020" stroke-width="4" stroke-linecap="round" stroke-linejoin="round">
+              <path d="M26 24 L18 32 L26 40"/>
+              <path d="M38 24 L46 32 L38 40"/>
+            </g>
+            <circle cx="32" cy="32" r="3.4" fill="#0b1020"/>
+          </svg>
           <span class="font-semibold">HackMate</span>
         </div>
         <p class="mt-2 text-slate-400">Find teammates and teams for hackathons with skill-based matching.</p>
@@ -452,19 +518,28 @@
       // Close when a link is clicked
       panel.querySelectorAll('a[href^="#"]').forEach(a => a.addEventListener('click', closePanel));
     })();
-    // Auth-aware header: greet and allow logout if token exists
-    (function(){
+    // Auth-aware header: greet, profile icon, and logout if token exists
+  (function(){
       try {
         const token = localStorage.getItem('hm_token');
         const user = JSON.parse(localStorage.getItem('hm_user')||'null');
-        if (!token || !user) return;
         const header = document.querySelector('header .flex.items-center.justify-between > div.flex.items-center.gap-3');
+        const prof = document.getElementById('profileIcon');
+        if (!token || !user) {
+          // logged out: keep icon hidden and leave login/create visible
+          if (prof) prof.classList.add('hidden');
+          return;
+        }
         if (!header) return;
         const loginLink = header.querySelector('a[href="login.html"]');
         if (loginLink) loginLink.remove();
-        const span = document.createElement('span');
-        span.className = 'text-xs text-slate-300';
-        span.textContent = `Hi, ${user.name || 'User'}`;
+  const createBtn = document.getElementById('newProfileBtn');
+  if (createBtn) createBtn.remove();
+        if (prof) prof.classList.remove('hidden');
+  const span = document.createElement('span');
+  span.className = 'text-xs text-slate-300';
+  span.id = 'greetingUser';
+  span.textContent = `Hi, ${user.name || 'User'}`;
         const btn = document.createElement('button');
         btn.className = 'rounded-lg border border-white/10 bg-white/5 px-3 py-2 text-xs text-white hover:bg-white/10';
         btn.textContent = 'Log out';
@@ -477,14 +552,25 @@
         if (mobileLogin) mobileLogin.remove();
         const mobileActions = document.getElementById('mobileMenuActions');
         if (mobileActions) {
+          const mp = document.getElementById('mobileProfileLink');
+          if (mp) mp.classList.remove('hidden');
+          const mobileCreate = mobileActions.querySelector('a[href="createprofile.html"]');
+          if (mobileCreate) mobileCreate.remove();
           const logout = document.createElement('button');
           logout.className = 'rounded-lg border border-white/10 bg-white/5 px-4 py-2 text-sm text-white hover:bg-white/10';
           logout.textContent = 'Log out';
           logout.addEventListener('click', () => { localStorage.removeItem('hm_token'); localStorage.removeItem('hm_user'); location.reload(); });
           mobileActions.appendChild(logout);
         }
+        // Keep greeting up to date if user changes in another tab
+        window.addEventListener('storage', (e)=>{
+          if (e.key === 'hm_user') {
+            try { const u = JSON.parse(e.newValue||'null'); const g=document.getElementById('greetingUser'); if (u && g) g.textContent = `Hi, ${u.name||'User'}`; } catch {}
+          }
+        });
       } catch {}
     })();
+    
     // Performance toggle
     (function(){
       const btn = document.getElementById('perfToggle');
