--- a/login.html
+++ b/login.html
@@ -10,6 +10,7 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="styles.css" />
   <script>window.API_BASE = 'http://localhost:4000';</script>
+  <script>window.API_BASE = 'http://localhost:4000';</script>
   <style>
     .bg-grid { background-image: linear-gradient(rgba(148,163,184,0.06) 1px, transparent 1px), linear-gradient(90deg, rgba(148,163,184,0.06) 1px, transparent 1px); background-size: 24px 24px; }
   </style>
@@ -73,7 +74,7 @@
           if (!res.ok) { const data = await res.json().catch(()=>({})); throw new Error(data.message || res.statusText); }
           const data = await res.json();
           try { localStorage.setItem('hm_token', data.token); localStorage.setItem('hm_user', JSON.stringify(data.user)); } catch {}
-          window.location.href = 'index.html#home';
+          window.location.href = 'profile.html';
         } catch (e) {
           btn.disabled = false; err.textContent = e.message || 'Login failed'; err.classList.remove('hidden');
         }
