--- a/profile.html
+++ b/profile.html
@@ -9,7 +9,9 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="styles.css" />
-  <script>window.API_BASE = 'http://localhost:4000';</script>
+  <script>
+    window.API_BASE = (location.origin && /^https?:\/\//.test(location.origin)) ? location.origin : 'http://localhost:4000';
+  </script>
 </head>
 <body class="bg-slate-950 text-slate-200 min-h-screen">
   <div class="pointer-events-none fixed inset-0 overflow-hidden">
