--- a/profile.html
+++ b/profile.html
@@ -22,7 +22,10 @@
   <header class="relative z-10 border-b border-white/10 backdrop-blur supports-[backdrop-filter]:bg-slate-900/40">
     <div class="mx-auto max-w-7xl px-6 py-5 flex items-center justify-between">
       <a href="index.html#home" class="flex items-center gap-3">
-        <svg width="36" height="36" viewBox="0 0 64 64" xmlns="http://www.w3.org/2000/svg" class="rounded-xl shadow-[0_0_40px_-10px_rgba(168,85,247,.7)]" role="img" aria-label="HackMate logo">
+        <svg width="36" height="36" viewBox="0 0 64 64" xmlns="http://www.w3.org/2000/svg" class
+        
+        
+        ="rounded-xl shadow-[0_0_40px_-10px_rgba(168,85,247,.7)]" role="img" aria-label="HackMate logo">
           <defs>
             <linearGradient id="hm_g2p" x1="0" y1="0" x2="1" y2="1">
               <stop offset="0%" stop-color="#a855f7"/>
