Changed few options in the About Us Section

--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
                 <div class="flex items-start gap-3">
   <img src="https://ui-avatars.com/api/?name=Shwetank&background=6366f1&color=0b1020&size=80&bold=true" alt="Shwetank" class="h-12 w-12 rounded-xl object-cover border border-white/10" />
                   <div>
-                    <h5 class="font-semibold">Shwetank</h5>
+                    <h5 class="font-semibold">Spandan</h5>
                     <p class="text-xs text-slate-400">Frontend Developer</p>
                   </div>
                 </div>
