--- a/createprofile.html
+++ b/createprofile.html
@@ -10,7 +10,7 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="styles.css" />
   <script>
-    window.API_BASE = (location.origin && /^https?:\/\//.test(location.origin)) ? location.origin : 'http://localhost:4000';
+    window.API_BASE = (location.origin && /^https?:\/\//.test(location.origin)) ? location.origin : 'https://hackmate-rgv7.onrender.com';
   </script>
 </head>
 <body class="bg-slate-950 text-slate-200 min-h-screen">
@@ -195,7 +195,7 @@
 
       // Ping API health
       (function(){
-        const API_BASE = window.API_BASE || 'http://localhost:4000';
+  const API_BASE = window.API_BASE || 'https://hackmate-rgv7.onrender.com';
         const statusEl = document.getElementById('apiStatus');
         fetch(`${API_BASE}/api/health`).then(r=>r.json()).then(d=>{
           statusEl.textContent = `API: ok • DB: ${d.db || 'unknown'}`;
@@ -215,7 +215,7 @@
         err.classList.add('hidden');
         btn.disabled = true;
         btn.textContent = 'Creating…';
-  const API_BASE = window.API_BASE || 'http://localhost:4000';
+  const API_BASE = window.API_BASE || 'https://hackmate-rgv7.onrender.com';
         const name = document.getElementById('fullName').value.trim();
         const email = document.getElementById('email').value.trim();
         const password = document.getElementById('password').value;
